Fix: Add specificity in querySelector to fix error field not showing

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
     --red: #d44a68;
     --light-grey: #bac5c8;
     --grey: #788794;
-    --dark-red: #c5415e;
-    --dark-green:#2d7d79;
+    --dark-red: #b03a53;
+    --dark-green:#256562;
 }
 
 html, body{
@@ -65,6 +65,7 @@ footer{
     display: flex;
     gap: 1.5rem;
     font-size: 1rem;
+    margin-left: 1rem;
 }
 
 .form-window {
@@ -154,6 +155,7 @@ footer{
 }
 
 .book-container {
+    padding: 1rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     grid-auto-rows: minmax(auto, 1fr);
